# chartkit

./: .gitignore  CHANGELOG.md  README.md  charting.example.toml  pyproject.toml  pyrightconfig.json
.chartkit/: config.example.toml
docs/: api-reference.md  architecture.md  configuration.md  cookbook.md  getting-started.md  internals.md  overlays.md  styling.md  transforms.md
docs/contributing/: architecture.md  extending.md  internals.md  testing.md
docs/guide/: collision.md  composition.md  configuration.md  metrics.md  plotting.md  transforms.md
docs/reference/: api.md
scripts/: test_tick_rotation.py
src/agora_charting/: __init__.py  accessor.py  config.py  engine.py  transforms.py
src/agora_charting/components/: __init__.py  collision.py  footer.py  markers.py
src/agora_charting/overlays/: __init__.py  bands.py  moving_average.py  reference_lines.py
src/agora_charting/plots/: __init__.py  bar.py  line.py
src/agora_charting/settings/: __init__.py  defaults.py  loader.py  schema.py
src/agora_charting/styling/: __init__.py  fonts.py  formatters.py  theme.py
src/chartkit/: __init__.py  _logging.py  accessor.py  engine.py  exceptions.py  result.py  transforms.py
src/chartkit/_internal/: __init__.py  collision.py  extraction.py  formatting.py  frequency.py  highlight.py  pipeline.py  plot_validation.py  saving.py  tick_formatting.py  tick_rotation.py
src/chartkit/charts/: __init__.py  _classification.py  _helpers.py  bar.py  line.py  registry.py  renderer.py  stacked_bar.py
src/chartkit/components/: markers.py
src/chartkit/composing/: layer.py  (+2 more)
tests/: conftest.py  test_accessor_layer.py  test_formatters.py
tests/charts/: test_area.py  test_area_enhancer.py  test_bar.py  test_bar_enhancer.py  test_bar_width.py  test_barh.py  test_classification.py  test_ecdf.py  test_eventplot.py  test_helpers.py  test_hist.py  test_pie.py  test_renderer.py  test_stacked_bar_enhancer.py  test_stackplot.py  test_stairs.py  test_statistical.py  test_stem.py  test_unsupported.py
tests/collision/: test_best_displacement.py  test_collect_obstacles.py  test_collision_engine.py  test_get_padded_bbox.py  test_pos_to_numeric.py
tests/composing/: test_axis_formatter.py  test_compose.py  test_compose_pipeline.py  test_composed_legend.py  test_extract_data.py  test_layer.py  test_layer_validation.py  test_validate.py
tests/decorations/: test_title.py
tests/engine/: test_normalize_highlight.py  test_validate_params.py
tests/formatting/: test_axis_formatters.py  test_highlight.py  test_tick_formatting.py
tests/integration/: test_accessor_pipeline.py  test_end_to_end.py
tests/internal/: test_formatting.py  test_saving.py
tests/metrics/: conftest.py  test_parse.py  test_registry.py  test_spec_parsing.py  test_std_band.py
tests/settings/: conftest.py  test_config_precedence.py  test_deep_merge.py  test_discovery.py  test_loader.py  test_schema.py
tests/transforms/: conftest.py  test_accessor.py  test_accum.py  test_annualize.py  test_coerce_input.py  test_despike.py  test_diff.py  test_drawdown.py  test_freq_resolution.py  test_input_pipeline.py  test_normalize.py  test_resample.py  test_resolve_periods.py  test_sanitize_result.py  test_to_month_end.py  test_validate_numeric.py  test_validate_params.py  test_variation.py  test_zscore.py
(+49 files in other folders)
