[project]
name = "agora-charting"
version = "0.1.0"
description = "Biblioteca de charting padronizado estilo Agora Investimentos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora_charting"]

[tool.hatch.build.targets.sdist]
include = [
    "src/agora_charting",
]

# Exemplo de configuracao do agora-charting via pyproject.toml
# Descomente e customize conforme necessario:
#
# [tool.charting]
# [tool.charting.branding]
# company_name = "Minha Empresa"
# footer_format = "Fonte: {source}, {company_name}"
#
# [tool.charting.colors]
# primary = "#003366"
# secondary = "#0066CC"
#
# [tool.charting.layout]
# figsize = [12.0, 8.0]
# dpi = 150
